[COOP-V002] - Aumentado cobertura de cacheamento